web/manifests/mongo.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-mongo
  namespace: ipa2025
spec:
  ports:
  - protocol: TCP
    port: 27017
    targetPort: 27017

---

apiVersion: v1
kind: Endpoints
metadata:
  name: external-mongo
  namespace: ipa2025
subsets:
  - addresses:
      - ip: "192.168.1.121"
    ports:
      - port: 27017
