web/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipa2025-msapp-web-ingress
  namespace: ipa2025
spec:
  ingressClassName: nginx
  rules:
    - http:
        host: 192.168.1.121
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipa2025-msapp-web-service
                port:
                  number: 80
